service/demo-cluster-ip-svc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  cluster-ip-svc-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-ip-svc-app
  labels:
    app: cluster-ip-svc-app
  namespace: cluster-ip-svc-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    #type: Recreate
    #rollingUpdate:
      #maxSurge: 25%
      #maxUnavailable: 25%
  selector:
    matchLabels:
      app: cluster-ip-svc-app
  template:
    metadata:
      labels:
        app: cluster-ip-svc-app
    spec:
      containers:
      - name: cluster-ip-svc-app
        image: neotkm/pod-healthcheck:v0.05
        imagePullPolicy: IfNotPresent

      #restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  namespace: cluster-ip-svc-app
  name: cluster-ip-svc-app
spec:
  selector:
    app: cluster-ip-svc-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 2022
