service/demo-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  clusterIP: 10.96.0.111
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.0.2.127
