service/demo-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  demo-ingress-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-ingress-app
  name: demo-ingress-app
  labels:
    app: demo-ingress-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: demo-ingress-app
  template:
    metadata:
      labels:
        app: demo-ingress-app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: demo-ingress-app
          image: "neotkm/pod-healthcheck:v0.04"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /ws/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /ws/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: demo-ingress-app
  namespace: demo-ingress-app
  labels:
    app: demo-ingress-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: demo-ingress-app

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress-app
  namespace: demo-ingress-app
  labels:
    app: demo-ingress-app
spec:
  rules:
    - host: demo-app.course3.dtln.cloud
      http:
        paths:
        - backend:
            serviceName: demo-ingress-app
            servicePort: 8080
